# decibelduck-be

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  makefile  pyproject.toml  setup.cfg
infra/: README.md
infra/terraform/contributor/: main.tf  variables.tf
infra/terraform/internal/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/internal/: main.tf  outputs.tf
infra/terraform/modules/secret/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/sql-instance/: main.tf  variables.tf
infra/terraform/modules/sql-user/: main.tf  outputs.tf  variables.tf
infra/terraform/new-developer/: README.md  cory.auto.tfvars  main.tf  variables.tf
infra/terraform/projects/decibelduck-internal/: .terraform.lock.hcl  main.tf  outputs.tf
infra/terraform/secret/: variables.tf
infra/terraform/sql-instance/: outputs.tf  variables.tf
infra/terraform/sql-user/: main.tf
infra/tools/: bootstrap-internal  bootstrap-terraform
src/decibelduck/: cloudstorage.py  config.py  database.py  log.py  main.py  soundfile.py
tests/: test_decibelduck.py
tools/: describe-version
