[tool.poetry]
name = "decibelduck-be"
version = "0.1.0"
description = "DecibelDuck API Backend"
authors = ["Cory Dodt <corydodt@gmail.com>", "Ashley Fisher <fish.ash@gmail.com>"]
packages = [
    { include = "decibelduck", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
