[metadata]
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/afisher/decibelduck-be
project_urls =
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
